// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAccount menu should be visible when menu button clicked 1`] = `
<div>
  <nav
    class="container"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Account options"
      class="button"
      role="button"
      tabindex="0"
      title="Account options"
      type="button"
    >
      v
    </button>
    <div
      class="menu"
      role="menu"
    >
      <h4
        class="menuHeading"
      >
        Account
      </h4>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          <button
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Edit account name
          </button>
        </li>
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Forget account
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Reset password
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`AddAccount should render 1`] = `
<div>
  <nav
    class="container"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Account options"
      class="button"
      role="button"
      tabindex="0"
      title="Account options"
      type="button"
    >
      v
    </button>
  </nav>
</div>
`;
